'Like Button Added'

--- a/Development/components/CartHome.html
+++ b/Development/components/CartHome.html
@@ -7,7 +7,7 @@
     <base href="/" />
 </head>
 <body>
-<script src = 'vendor5.min.js'></script>
+<script src = 'vendor.min.js'></script>
 <script src = '/components/mainapp.min.js'></script>
 
 <form ng-submit = 'search()'>
